revisando o ultimo capítulo

--- a/elementos-textuais/espacos-funcoes-mensuraveis.tex
+++ b/elementos-textuais/espacos-funcoes-mensuraveis.tex
@@ -164,7 +164,7 @@ Iniciaremos verificando o comportamento de interseção de elementos de uma \sig
     Assim, $(A_j^c)$ forma uma sequência de conjuntos $\mathcal{C}$-mensuráveis acarretando que 
     $\displaystyle \bigcup_{j = 1}^\infty A_j^c \in \mathcal{C}$. 
     Segue, pelas \textit{Leis de Morgan}
-    \footnote{Caso não conheça consulte \supercite{elon}{p.26}}, que 
+    \footnote{Vide \supercite{elon}{p.26}}, que 
     $$
     \displaystyle \bigcup_{j = 1}^\infty A_j^c 
     = \left(\displaystyle \bigcap_{j = 1}^\infty A_j\right)^c
@@ -687,14 +687,13 @@ Observe que o lema \ref{lem:decomposicao-da-funcao-em-partes-positiva-negativa} 
 De fato, somando as duas expressões membro a membro vemos que 
 $$f + |f| = (f^+ + f^+) - (f^- + f^-) = 2f^+$$
 Assim, podemos expressar $f^+ = \dfrac{|f| + f}{2}$.
-De modo semelhante, pode-se subtrair membro a membro e obter a expressão $f^- = \dfrac{|f| - f}{2}$. 
+De modo semelhante, conseguimos subtrair membro a membro e obter a expressão $f^- = \dfrac{|f| - f}{2}$. 
 Isso demonstra o lema adiante:
 
     \begin{lemma}
     \label{prop:identidades-das-partes-das-funcoes}
         Se $f: X \to \R$ é uma função real, então $f^+ = \dfrac{|f| + f}{2}$ e $f^- = \dfrac{|f| - f}{2}$.
     \end{lemma}
-Com isso, podemos responder à indagação anterior por meio do seguinte teorema:
     \begin{theorem}
         Uma função $f: X \to \R$ é $\cc$-mensurável se, e somente se, suas partes negativa e positiva são ambas $\cc$-mensuráveis. 
     \end{theorem}
@@ -709,721 +708,4 @@ Com isso, podemos responder à indagação anterior por meio do seguinte teorema
     \end{prova}
 
 Uma vez que foram apresentadas as definições de \sigal, espaços mensuráveis e funções mensuráveis; nosso alicerce está totalmente consolidado para que possamos entender o que é uma medida medida sem muita dificuldade.
-Isso faremos na seção seguinte
-
-    % \begin{example}
-    %         Seja $f: \R \to \R$ definida por  $f(x) = (\cos x, \seno x)$.
-    %         Ao analisarmos o gráfico de $f$, podemos observar que $f$ é uma circunferência de raio 1 centrada na origem conforme está ilustrada na figura abaixo
-    %         \begin{figure}[h!]
-    %         	\centering
-    %         	\Caption{\label{fig:grafico-da-curva-circulo} Gráfico da curva $f(x) = (\cos x, \sin x)$}	
-    %         	\UECEfig{}{
-    %         	    \begin{tikzpicture}[scale=1.5]
-    %                         % Eixos cartesianos
-    %                         \draw[->] (-1.25,0) -- (2,0) ;
-    %                         \draw[->] (0,-1.25) -- (0,1.75) ;
-    %                         % Rótulos dos eixos
-                            
-    %                         \node at (1.1,-0.15) {$1$};
-    %                         \node at (-0.15,1.15) {$1$};
-    %                         % \foreach \x in {-1,1}
-    %                         %   \draw (\x,0.05) -- (\x,-0.05) node[below right] {$\x$};
-    %                         % \foreach \y in {-1,1}
-    %                         %   \draw (0.05,\y) -- (-0.05,\y) node[left] {$\y$};
-                            
-    %                         % Gráfico da função
-    %                         \draw[domain=0:2*pi,samples=100,thick,blue] plot ({cos(\x r)},{sin(\x r)});
-    %                         % Legenda
-    %                         \node[blue] at (1.2,1.2) {$f(x) = (\cos x, \sin x)$};
-    %                     \end{tikzpicture}
-    %         	}{
-    %         	    \Fonte{Elaborado pelo autor}
-    %         	}	
-    %         \end{figure}
-    %     Assim, $f^+= \sqrt{1 - x^2}$ enquanto que $f^- = - \sqrt{1 - x^2}$.
-        
-    % \end{example}
-    
-%%%%%%%%% ESPAÇOS MENSURÁVEIS
-\section{Os Espaços de Funções Mensuráveis}
-    Vimos até aqui é como identificar espaços e funções mensuráveis.
-    As vezes, teremos conjuntos "muito grandes" que podem ser medidos, mas sua medida não poderá ser expressa por um número real.
-    Para solucionar este problema, apresentaremos um novo sistema numérico.
-
-    \begin{definition}
-    \label{def:reta-estendida}
-        A coleção $\xreta$ que consiste de $\R \cup \{-\infty, +\infty\}$ é chamada de \textbf{Sistema Estendido de Números Reais}.
-    \end{definition}
-
-    Este sistema é necessário por vários motivos que serão apresentados ao longo do texto. 
-    Um deles, por exemplo, é a conveniência em dizer que o comprimento da Reta Real $\R$ é $+\infty$.
-    Embora estejamos "adicionando" os símbolos $\pm \infty$ à reta real, vale a ressalva de que eles não são números.
-    Com isso, $\xreta$ não é fechado para operações de $\R$ tais como $(+\infty) + (-\infty)$ que nem definido é.
-    Dito isso, para $x \in \R$, as operações dos símbolos $+\infty$ e $-\infty$ são:
-    \begin{multicols}{2}
-        \begin{itemize}
-            \item $(+ \infty) + (+ \infty)  = + \infty$;
-            \item $x + (+ \infty) = (+ \infty) + x = + \infty$;
-            \item $(- \infty) + (- \infty)  = - \infty$;
-            \item $x + (- \infty) = (- \infty) + x = - \infty$;
-            \item $(+ \infty)\cdot (+ \infty) =  +\infty $;
-            \item $(- \infty)\cdot (- \infty) =  +\infty $;
-            \item $(+ \infty)\cdot (- \infty) =  -\infty $;
-            \item $(- \infty)\cdot (+ \infty) =  -\infty $.
-        \end{itemize}
-    \end{multicols}
-    Na multiplicação, dependendo do número real, a operação diferencia-se.
-    Assim, podemos ter
-    \begin{multicols}{2}
-    $$
-    x \cdot (+\infty) = (+\infty) \cdot x =
-    \left\{\begin{array}{cc}
-          +\infty, & \ \textrm{se } x > 0\\
-          0, & \ \textrm{se } x = 0\\
-          - \infty, & \textrm{se } x < 0
-    \end{array}\right.
-    $$
-    
-    $$
-    x \cdot (-\infty) = (-\infty) \cdot x =
-    \left\{\begin{array}{cc}
-          -\infty, & \ \textrm{se } x > 0\\
-          0, & \ \textrm{se } x = 0\\
-          + \infty, & \textrm{se } x < 0
-    \end{array}\right.
-    $$  
-    \end{multicols}
-
-    Neste novo contexto de números reais a \sigal de Borel não é mais válida uma vez que a definição \ref{def:algebra-borel} não inclui $+\infty$ nem $-\infty$.
-    Com isso, considere $\xreta$.
-    Tomando um conjunto arbitrário $E \in \borel$, com $\varnothing \neq E$, defina $E_1 = E \cup \{-\infty\}, E_2 = E \cup \{+\infty\}$ e $E_3 = E \cup \{-\infty, +\infty\}$. 
-    Desta forma, o conjunto $\overline{\borel} = \displaystyle \bigcup_{E \in \borel} \{E, E_1, E_2, E_3\}$ é uma \sigal de $\xreta$. Com efeito, se $E \in \borel$, então é um intervalo aberto conforme o teorema \ref{teo:equiv-borel}.
-    Assim, $E_1, E_2, E_3$ e $E_4$ serão intervalos do tipo $[-\infty,x)$ ou $(x, +\infty]$ que são elementos de $\borel$ acrescidos de $+\infty$ ou $-\infty$. 
-    Deste modo, é fácil verificar que se um elemento $A \in \xborel$, então $A^c \in \xborel$.
-    Além disso, a união enumerável é, no máximo, o intervalo $[-\infty,+\infty]$ que é exatamente $\xreta$.
-    Desta forma, $\xborel$ é uma \sigal de $\xreta$.
-
-    \begin{definition}
-    \label{def:algebra-borel-estendida}
-        A \sigal $\overline{\borel} = \displaystyle \bigcup_{E \in \borel} \{E, E_1, E_2, E_3\}$ do conjunto $\xreta$ é chamada de Álgebra de Borel Estendida. 
-    \end{definition}
-
-    Uma vez que estamos familiarizados com os conceitos de funções de valores reais mensuráveis, estamos prontos para estender este conceito para o conjunto $\xreta$.
-
-    \begin{definition}
-    \label{def:familia-funcoes-mensuraveis}
-        Sendo $(X, \mathcal{C})$ um espaço mensurável, uma função de valores reais estendidos $f: X \to \xreta$ é dita $\mathcal{C}$-mensurável caso o conjunto
-        $\{x \in X; f(x) > \alpha\} \in \mathcal{C}$ para qualquer que seja $\alpha \in \R$. 
-    \end{definition}
-
-	Denotaremos a família de todas as funções de valores reais estendidos de $X$ que são $\mathcal{C}$-mensuráveis por $M(X, \mathcal{C})$.
-    \begin{proposition}
-    \label{prop:identidade-intersecao-mais-infinito}
-        Se $f \in \menfus$, então $\{x \in X; f(x) = +\infty\} = \displaystyle \bigcap_{n = 1}^\infty \{x \in X; f(x) > n\}$.
-    \end{proposition}
-
-    \begin{prova}
-        Tome, de modo arbitrário, um elemento $a \in X$. 
-        Assim, 
-        \begin{align*}
-            a \in \bigcap_{n = 1}^\infty \{x \in X; f(x) > n\} 
-            \Leftrightarrow & a \in \{x \in X; f(x) > n\}, \ \forall n \in \N\\
-            \Leftrightarrow & \forall n \in \N,\ f(a) > n\\
-            \Leftrightarrow & \dlim_{n \to \infty} f(a) \geq \dlim_{n \to \infty} n\\
-            \Leftrightarrow & f(a) \geq +\infty.  
-        \end{align*}
-    Como estamos trabalhando com $\xreta$, não existe elemento $x > +\infty$.
-    Logo, o único elemento possível para $f(a)$ é $+\infty$.
-    Assim, tudo isso ocorre se, e somente se, o elemento $a \in \{x \in X; f(x) = +\infty\}$ como queríamos.
-    Além disso, note que cada $\{x \in X; f(x) > n\} \in \mathcal{C}$.
-    Segue, pela proposição \ref{prop:interseção-elementos-sigmas}, que $\displaystyle \bigcap_{n = 1}^\infty \{x \in X; f(x) > n\} \in \mathcal{C}$ acarretando que $\{x \in X; f(x) = +\infty\} \in \mathcal{C}$. 
-    \end{prova}
-
-    \begin{proposition}
-    \label{prop:identidade-união-menos-infinito}
-        Se $f \in \menfus$, então $\{x \in X; f(x) = -\infty\} = \displaystyle \left(\bigcup_{n = 1}^\infty \{x \in X; f(x) > - n\}\right)^c$.
-    \end{proposition}
-	%
-    \begin{prova}
-        Analogamente à proposição \ref{prop:identidade-intersecao-mais-infinito} tomemos $a \in X$. 
-        Segue que 
-        \begin{align*}
-            a \in \left(\bigcup_{n = 1}^\infty \{x \in X; f(x) > - n\}\right)^c
-            \Leftrightarrow & a \in \bigcap_{n = 1}^\infty \left(\{x \in X; f(x) > - n\}\right)^c\\
-            \Leftrightarrow & \forall \ n \in \N, a \in \left(\{x \in X; f(x) > - n\}\right)^c\\
-            \Leftrightarrow & \forall \ n \in \N, a \notin \{x \in X; f(x) > - n\}\\
-            \Leftrightarrow & \forall \ n \in \N, a \in \{x \in X; f(x) \leq - n\}\\
-            \Leftrightarrow & \forall \ n \in \N, f(a) \leq - n\\
-            \Leftrightarrow & \lim_{n \to \infty} f(a) \leq \lim_{n \to \infty} (- n)\\            
-            \Leftrightarrow & f(a) \leq -\infty\\            
-            \Leftrightarrow & f(a) = -\infty\\            
-            \Leftrightarrow & a \in \{x \in X; f(x) = -\infty\}            
-        \end{align*}
-        
-    Ora, cada $\{x \in X; f(x) > - n\} \in \mathcal{C}$.
-    Assim, por definição de \sigal, temos que $ \displaystyle\bigcup_{n = 1}^\infty \{x \in X; f(x) > - n\} \in \mathcal{C}$ e também 
-    $\displaystyle\left(\bigcup_{n = 1}^\infty \{x \in X; f(x) > - n\}\right)^c \in \mathcal{C}$.
-    Concluímos disso que $\{x \in X; f(x) = -\infty\} \in \mathcal{C}$ como queríamos provar. 
-    \end{prova}
-
-    \begin{theorem}
-    \label{teo:condição-de-mensurabilidade}
-        Um função de valores reais estendidos $f: X \to \xreta$ é $\cc$-mensurável se, e somente se, os conjuntos 
-        $A = \{ x \in X; f(x) = +\infty\}$ e $B = \{x \in X; f(x) = -\infty\}$
-		 são elementos de $\mathcal{C}$ e a função $h: X \to \R$ definida por
-		 
-		 $$
-		 h(x) = \left\{\begin{array}{cc}
-		     f(x), & \textrm{\ se } x \notin A\cup B  \\
-		      0,& \textrm{\ se } x \in A\cup B
-		 \end{array}\right.
-		 $$
-		 é $\cc$-mensurável.
-	 \end{theorem}
-\begin{prova}
-    Suponha que $f \in \menfus$. 
-    Logo, pelas proposições \ref{prop:identidade-intersecao-mais-infinito} e \ref{prop:identidade-união-menos-infinito}, os conjuntos $A$ e $B$ são elementos de $\mathcal{C}$.
-    Assim, tome $\alpha \in \R$ com $\alpha \geq 0$, então os elementos de $\{x \in X; h(x) > \alpha\}$ são os elementos de $\{x \in X; f(x) > \alpha\}$ que não estão em $A$, pois $h$ tem contradomínio $\R$.
-    $A \in \cc \Rightarrow A^c \in \cc$. 
-    Com isso, 
-    $$
-    \{x \in X; h(x) > \alpha\} = A^c\cap \{x \in X; f(x) > \alpha\} \in \cc
-    $$
-    Segue, pela proposição \ref{prop:interseção-elementos-sigmas} que $\{x \in X; h(x) > \alpha\} \in \cc$, ou seja, $h$ é $\cc$-mensurável.
-    Caso, $\alpha < 0$, então os elementos de $\{x \in X; h(x) > \alpha\} = \{x \in  X ; f(x) > \alpha\} \cup B $, pois $h(x) = 0$ para $x \in A \cup B$.
-    Desta forma $h$ é $\cc$-mensurável.
-
-    Por outro lado, se supormos que $A$ e $B$ são elementos de $\mathcal{C}$ e $h$ é $\cc$-mensurável, então
-    $$\{x \in X; f(x) > \alpha\} = \{x \in  X ; h(x) > \alpha\} \cup A $$
-    quando $\alpha \geq 0$, e 
-    $$\{x \in X; f(x) > \alpha\} = \{x \in  X ; h(x) > \alpha\} - B $$
-    quando  $\alpha < 0$ por motivos análogos à primeira parte da demonstração.
-    Portanto, $f$ é uma função $\cc$-mensurável como desejávamos.
-\end{prova}
-
-Como consequência do teorema \ref{prop:aritmetica-uma-funcao} e o teorema \ref{teo:condição-de-mensurabilidade} obtemos, imediatamente, que se $ f \in M(X,\mathcal{C})$, então as funções $cf, f^2, |f|, f^+$ e $f^-$ também são elementos de $M(X, \mathcal{C})$.
-Entretanto, um resultado análogo à proposição \ref{prop:aritmetica-duas-funcoes} não possível em $\xreta$.
-Isso acontece por que em $\xreta$ a operação de adição não é bem definida.
-Então caso $f(x) = +\infty$ e $g(x) = -\infty$ para algum $x \in \R$ a adição
-$f(x) + g(x)$ não é realizada.
-Por outro lado, a função $fg$ é $\cc$-mensurável se $f$ e $g$ forem ambas $\cc$-mensuráveis.
-Para mostrar isso, precisamos do seguinte teorema
-
-\begin{theorem}
-\label{teo:mensurabilidade-sequencia-funcoes-mensuraveis}
-	Seja $(f_n)$ uma sequência de elementos de $\menfus$ e defina as funções
-	$$f(x) = \inf f_n(x),\  
-	F(x) = \sup f_n(x),\  
-	f^*(x) = \lim\inf f_n(x),\   
-	F^*(x) = \lim\sup f_n(x).$$
-	Então as funções $f, f^*, F$ e $F^*$ são elementos de $\menfus$.
-\end{theorem}
-\begin{prova}
-	Como $(f_n)$ é uma sequência de funções $\cc$-mensuráveis e $f = \inf f_n$, afirmamos que $\{x \in ; f(x) \geq \alpha\} = \displaystyle \bigcap_{n = 1}^\infty \{x \in X; f_n(x) \geq \alpha\}$.
-	De fato, tomemos um elemento $h \in X$.
-	Assim, 
-		\begin{align*}
-			h \in \bigcap_{n = 1}^\infty \{x \in X; f_n(x) \geq \alpha\} \Leftrightarrow	&
-			h \in \{x \in X; f_n(x) \geq \alpha\}\ \forall n \in \N\\
-			\Leftrightarrow	&	
-			f_n(h) \geq \alpha\ \forall n \in \N\\
-			\Leftrightarrow	&	
-			\inf_{n \in \N}f_n(h) \geq \inf_{n \in \N}\alpha\ \forall n \in \N\\
-			\Leftrightarrow	&	
-			f(h) \geq \alpha\ \forall n \in \N\\
-			\Leftrightarrow	&
-			h \in \{x \in X; f(x) \geq \alpha\}
-		\end{align*}
-	Como cada $\{x \in X; f_n(x) \geq \alpha\}$ é $\cc$-mensurável, segue pela proposição \ref{prop:interseção-elementos-sigmas} que o conjunto $\{x \in X; f(x) \geq \alpha\} \in \cc$ para todo $\alpha \in \R$.
-	Desta forma, $f$ é $\cc$-mensurável.
-	
-	Observe, também, que $\{x \in X; F(x) >\alpha\} = \displaystyle \bigcup_{n = 1}^\infty \{x \in X; f_(x) >\alpha\}$.
-	Com efeito, para $h \in X$ 
-	\begin{align*}
-		h \in \bigcup_{n = 1}^\infty \{x \in X; f_n(x) > \alpha\} \Leftrightarrow	&
-		\exists\ k \in \N \textrm{tal que\ } h \in \{x \in X; f_k(x) > \alpha\}\\
-		\Leftrightarrow	&	
-		f_k(h) > \alpha,\ \forall \alpha \in \R\\
-		\Leftrightarrow	&	
-		F(x) \geq f_k(h) > \alpha,\ \forall \alpha \in \R\\
-		\Leftrightarrow	&	
-		F(x) > \alpha,\ \forall \alpha \in \R\\
-		\Leftrightarrow	&
-		h \in \{x \in X; F(x) > \alpha\}
-	\end{align*}
-	Assim, concluímos que $f$ e $F$ são $\cc$-mensuráveis. 
-	Note que a mensurabilidade de $f^*$ e $F^*$ vem de $f$ e $F$ uma vez que
-	$$
-	f^*(x) = \sup_{n \geq 1} \left\{\inf_{m \geq n} f_m(x)\right\}
-	\textrm{\ e\ }
-	F^*(x) = \inf_{n \geq 1} \left\{\sup_{m \geq n} f_m(x)\right\}
-	$$
-\end{prova}
-
-\begin{corollary}
-	\label{cor:convergencia-de-uma-sequencia-mensuravel}
-	Se $(f_n)$ é uma sequência em $\menfus$ que converge para $f$ em $X$, então
-	$f$ também está em $\menfus$.
-\end{corollary}
-\begin{prova}
-	Ora, por hipótese $\displaystyle f(x) = \lim_{n \to +\infty} f_n(x)$.
-	Só que $\displaystyle \lim_{n \to +\infty} f_n(x) = \lim_{n \in \N} \inf f_n(x)$.
-	Segue que $\displaystyle f(x) = \lim_{n \in \N} \inf f_n(x)$ que, por sua vez, é $\cc$-mensurável pelo teorema anterior.
-\end{prova}
-
-% Parte final do Capítulo - Truncamento
-\begin{definition}[Truncamento de uma função mensurável]
-	Seja $f$ uma função em $\menfus$ e $A > 0$.
-	Definimos o truncamento $f_A$ da função $f$ por
-	$$ f_A(x) =
-	\left\{\begin{array}{cc}
-		f(x), & \textrm{se\ } |f(x)| \leq A \\
-		A, & \textrm{se\ } f(x) > A \\
-		-A, & \textrm{se\ } f(x) < A 
-	\end{array}\right.
-	$$
-\end{definition}
-
-% Exemplos de Truncamento
-
-\begin{example}
-	Seja $f \in \menfus$ tal que $f(x) = x^2-2$.
-	Então o truncamento $f_2$ é representado, graficamente, como
-	\begin{figure}[h!]
-		\centering
-		\Caption{\label{fig:representação do truncamento da função f(x) = x^2-2} representação do truncamento $f_2$ da função $f(x) = x^2-2$} 
-		\UECEfig{}{
-			\begin{tikzpicture}[scale=0.5]
-				% Defina o intervalo x
-				\def\xmin{-3}
-				\def\xmax{3}
-%				
-%				% Desenhe a função f(x)
-%				\draw[domain=\xmin+0.4:\xmax-0.4, smooth, samples=100, blue] plot (\x, {\x*\x -2});
-				
-				% Desenhando a função f_2
-				\draw[domain=2:4.5, thick, samples=100, red] plot (\x, {2});
-				\draw[domain=-4.5:-2, thick, samples=100, red] plot (\x, {2});
-				\draw[domain=-2:2, thick, samples=100, red] plot (\x, {\x*\x -2});
-				
-				% Adicione rótulos aos eixos
-				\draw[->] (\xmin-2,0) -- (\xmax+2,0) node[right] {$x$};
-				\draw[->] (0,\xmin-1) -- (0,\xmax+2.5) node[above] {$y$};
-				
-                % Rótulos
-				\foreach \i in {-4,-3,-2,-1,1,2,3,4}{
-					\draw (\i,2pt)--(\i, -2pt) node[below]{{\footnotesize $\i$}};
-				}
-				
-				\foreach \i in {1,2,3,4,5}{
-					\draw (2pt,\i)--(-2pt, \i) node[left]{{\footnotesize $\i$}};
-				}
-			\end{tikzpicture}
-		}{
-			\Fonte{Elaborado pelo autor}		}   
-	\end{figure}
-	
-\end{example}
-
-	Observe que a figura \ref{fig:representação do truncamento da função f(x) = x^2-2} mostra que o truncamento $f_2$ efetua uma espécie de \enquote{limitação} da função $f$ pela constante $2$.
-
-\begin{proposition}
-	\label{prop:truncamento-mensurável}
-	Seja $A$ um número real maior que zero.
-	Se $f$ é uma função em $\menfus$, então $f_A$ é uma função $\cc$-mensurável.
-\end{proposition}
-\begin{prova}
-	De fato, se os elementos $x \in X$ são tais que $A \leq f(x) \leq A$, então $f_A(x) = f(x)$.
-	Logo $f_A$ é $\cc$-mensurável, pois $f$ o é.
-	Caso esses elementos sejam tais que $f(x) > A$ ou $f(x) <A$ a função $f_A$ é constante.
-	Segue pela proposição \ref{ex:funcao-constante} que $f_A$ é um elemento de $\menfus$.
-\end{prova}
-
-Retornemos para a mensurabilidade do produto de duas funções com valores reais estendidos.
-Sejam $f,g \in \menfus$. 
-Tomemos duas sequências $(f_n)$ e $(g_m)$ tais que para cada $k \in \N$, $f_k$ e $g_k$ são truncamentos de $f$ e $g$, respectivamente.
-Ou seja, 
-	$$ g_m(x) =
-		\left\{\begin{array}{cc}
-			g(x), & \textrm{se\ } |g(x)| \leq m \\
-			n, & \textrm{se\ } g(x) > m \\
-			-n, & \textrm{se\ } g(x) < m 
-		\end{array}\right.	
-	$$
-e $f_n$ é definida de modo similar.
-Pela proposição \ref{prop:truncamento-mensurável}, $f_n$ e $g_m$ são $\cc$-mensuráveis para cada $n$ e $m$ números naturais.
-Assim, pela proposição \ref{prop:aritmetica-duas-funcoes} $f_ng_m$ também é $\cc$-mensurável para quaisquer $n, m \in \N$.
-Como o truncamento de uma função $f$ causa uma \enquote{limitação} na função $f$ se tomarmos $n$ grande suficiente o truncamento $f_n$ tende a se aproximar da função $f$.
-Assim, para $x \in X$
-$$
-\lim_{n \to +\infty} \left(f_n(x)g_m(x)\right) = f(x)g_m(x) 
-$$
-Segue pelo corolário \ref{cor:convergencia-de-uma-sequencia-mensuravel} que 
-$fg_m \in \menfus$. Com isso, temos que para $x \in X$
-$$
-\lim_{m \to +\infty} \left(f(x)g_m(x)\right) 
-= f(x)g(x) = (fg)(x)
-$$
-Segue, pelo mesmo corolário, que $fg \in \menfus$.
-
-Nos tratamos da mensurabilidade de funções reais apenas.
-Em alguns casos, é necessário trabalhar com mensurabilidade de uma forma mais abstrata, como na teoria de probabilidades, por exemplo.
-Para encerrar esta subseção apresentaremos a definição abstrata de mensurabilidade de uma função.
-
-\begin{definition}
-	\label{def:mensurabilidade-abstrata}
-	Sejam $(X, \cc)$ e $(Y,\mathcal{F})$ dois espaços mensuráveis.
-	Dizemos que uma função $\phi:(X, \cc)\to (Y,\mathcal{F})$ é dita mensurável se o conjunto $f^{-1}(E) = \{x \in X; f(x)\in E\} \in \cc$ para todo conjunto $E \in \mathcal{F}$. 
-\end{definition}
-
-Embora essa definição pareça ser totalmente distinta da definição \ref{def:mensurabilidade-funções-reais}, as duas são equivalentes no caso particular de $Y = \R$ e $\mathcal{F} = \borel$ conforme demonstrado a seguir.
-
-\begin{proposition}
-	Seja $(X, \cc)$ um espaço mensurável e $f$ uma função.
-	Então $f$ é $\cc$-mensurável se, e somente se. $f^{-1}(E) \in \cc$ para todo boreliano $E$. 
-\end{proposition}
-\begin{prova}
-	Suponha $f$ uma função $\cc$-mensurável. 
-	Sabemos pela definição \ref{def:algebra-borel} que os elementos da álgebra de Borel são do tipo $(-\infty,x)$ com $x \in \R$.
-	Assim, dado arbitrariamente $\alpha \in \R$ temos que
-	$$
-	f^{-1}(-\infty, \alpha)
-	=\{x \in X; f(x) \in (-\infty, \alpha)\}
-	=\{x \in X; f(x) \leq \alpha\}
-	\footnote{$f^{-1}(-\infty, \alpha)$ indica a pré imagem de $(-\infty, \alpha)$.}
-	$$
-	Como $f$ é $\cc$-mensurável segue pelo teorema \ref{teo:equiv-funcoes-mensuraveis} que $f^{-1}(-\infty, \alpha) \in \cc$.
-	Reciprocamente se 
-	$f^{-1}(-\infty, \alpha) \in \cc$ para qualquer $\alpha$ concluímos, imediatamente, que $\{x \in X; f(x) < \alpha\} \in \cc$ para todo $\alpha \in \R$.
-	Portanto, $f$ é $\cc$-mensurável.
-\end{prova}
-%%%%%%%%%% Espaços de Medida
-
-\section{Espaços de Medida}
-
-Nas subseções anteriores, nós trabalhos com conjuntos e com funções mensuráveis, isto é, que podem ser medidas de alguma forma.
-Nesta subseção, nos preocuparemos em definir e trabalhar com funções de um espaço mensurável $(X, \mathcal{C})$ que daremos o nome de "medida".
-Tais funções são induzidas pela nossa concepção de comprimento, área, volume, etc.
-Dito isso, para trabalhamos com medidas primeiro retomaremos alguns resutlados sobre sequência de conjuntos.
-
-\begin{definition}
-\label{def:sequência-crescente-decrescente-de-conjuntos}
-    Uma sequência de conjuntos $(A_n)$ é dita \textbf{crescente} se $A_n \subseteq A_{n+1}$ para todo $n \in \N$.
-    Caso tenhamos $A_n \supseteq A_{n+1}$ para todo $n \in \N$, dizemos que a sequência  de conjuntos é \textbf{decrescente}.
-\end{definition}
-
-\begin{proposition}
-\label{prop:sequencia-crescente-conjuntos-resultado-A_n}
-Seja $(E_n)$ uma sequência crescente de conjuntos. Se $(A_n)$ é tal que $A_1 = E_1$ e $A_n = E_n - E_{n -1}$ para todo $n > 1$, então:
-\begin{enumerate}[label* = (\roman*)]
-    \item $A_n$ é uma sequência disjunta;
-        \footnote{Lembre que uma sequência disjunta significa que $A_i \cap A_j = \varnothing$ para todo $i \neq j$}
-    \item $E_n = \displaystyle \bigcup_{j = 1}^n A_n$;
-    \item $\displaystyle \bigcup_{j = 1}^\infty E_n = \displaystyle \bigcup_{j = 1}^\infty A_n$;
-\end{enumerate}
-\end{proposition}
-
-\begin{prova}
-    Para provar $(a)$ precisamos mostrar que para todo $n,m \in \N$ se $m \neq n$, então $A_n \cap A_m = \varnothing$.
-    Lembre que $A - B = A\cap B^c$ para quaisquer conjuntos $A$ e $B$.
-    Desta forma, como a interseção entre conjuntos é associativa e comutativa temos que
-    \begin{align*}
-        A_m\cap A_n =& (E_m - E_{m -1}) \cap (E_n - E_{n -1})\\
-        =& (E_m \cap E_{m -1}^c) \cap (E_n \cap E_{n -1}^c)\\
-        =& (E_m \cap E_n) \cap ( E_{m -1}^c\cap E_{n -1}^c)\\
-        =& (E_m \cap E_n) \cap \left( E_{m -1}\cup E_{n -1}\right)^c\\
-    \end{align*}
-    Com isso, se $m > n$, então $E_n \subseteq E_m$ e $E_{n-1} \subseteq E_{m-1}$, pois $(E_n)$ é uma sequência crescente.
-    Além disso, $E_m^c \subseteq E_{m -1}^c$ e $E_m \cap E_m^c = \varnothing$.
-    Segue que
-    $$
-    (E_m \cap E_n) \cap \left( E_{m -1}\cup E_{n -1}\right)^c =
-    (E_m) \cap E_{m -1}^c = 
-    \varnothing
-    $$
-    Caso tenhamos $m < n$ temos $E_m \subseteq E_n$ e $E_{m-1} \subseteq E_{n-1}$.
-    Segue analogamente que 
-    $$
-    (E_m \cap E_n) \cap \left( E_{m -1}\cup E_{n -1}\right)^c =
-    (E_n) \cap E_{n -1}^c = 
-    \varnothing
-    $$
-    Em todo caso, $A_m \cap A_n = \varnothing$ para todo $m \neq n$.
-
-    Provaremos o item $(b)$ por indução sobre $n$.
-    Como $(E_n)$ é crescente, temos que $E_1 \subseteq E_2$.
-    Com isso, temos que 
-        \begin{align*}
-            \bigcup_{j = 1}^2 A_j = A_1 \cup A_2= & E_1 \cup (E_2 - E_1)\\
-            = & E_1 \cup (E_2 \cap E_1^c)\\
-            = & (E_1 \cup E_2) \cap (E_1 \cup E_1^c)\\
-            = & (E_1 \cup E_2) \cap \mathcal{C}\\
-            = & (E_1 \cap E_2)
-            = E_2  
-        \end{align*}
-    Suponha que exista um $k \in \N$ tal que $\displaystyle \bigcup_{j = 1}^k A_j = E_k$.
-    Mostraremos que $\displaystyle \bigcup_{j = 1}^{k+1} A_j = E_{k +1}$ também é verdadeira.
-    Com efeito, 
-    \begin{align*}
-        \bigcup_{j = 1}^{k+1} A_j =& \left(\bigcup_{j = 1}^{k} A_j\right) \cup A_{k+1}\\
-        =& E_k \cup A_{k +1}\\
-        =& E_k \cup (E_k - E_{k+1})\\
-        =& E_k \cap E_{k+1}\\
-        =& E_{k+1}\\
-    \end{align*}
-    Segue, pelo método da indução finita, que $\displaystyle \bigcup_{j = 1}^n A_j = E_n\ \forall n \in \N$.
-
-    Por fim, $(c)$ é um resultado imediato, pois $ x \in \displaystyle \bigcup_{j = 1}^\infty E_j$ se, e somente se, 
-    existe um $n_0 \in \N$ tal que $x \in E_{n_0}$. 
-    Pelo item $(b)$, isso só ocorre se $x \in \displaystyle \bigcup_{j = 1}^{n_0}A_j$.
-    Mas isso é equivalente à dizer que existe um $k$ com $1\leq k\leq n_0$ tal que $x \in A_k$.
-    Como $k \in \N$ isso acontece se, e somente se, $x \in A_k$ para algum $k \in \N$.
-    Portanto $x \in \displaystyle \bigcup_{j = 1}^\infty A_j$.
-\end{prova}
-
-\begin{proposition}
-\label{prop:sequencia-decrescente-conjuntos-resultado-A_n}
-Seja $(F_n)$ uma sequência decrescente de conjuntos. 
-Se $(E_n)$ é tal que $E_n = F_1 - F_n$ para todo $n \in \N$, então $(E_n)$ é crescente e 
-$\displaystyle \bigcup_{j = 1}^\infty E_n = \displaystyle F_1 - \bigcup_{j = 1}^\infty F_n$.
-\end{proposition}
-
-\begin{prova}
-    Queremos mostrar que $(E_n)$ é crescente, isto é, $E_n \subseteq E_{n+1}$ para todo $n \in \N$.
-    Tome $x \in E_n$. Logo, $x \in F_1$ e $x \notin F_n$, por construção.
-    Como $(F_n)$ é decrescente, $F_{n} \supseteq F_{n+1}$. 
-    Assim, $x \notin F_n \Rightarrow x \notin F_{n+1}$.
-    Com isso, $x \in F_1$ e $x \notin F_{n+1}$.
-    Segue que $x \in E_{n+1}$ e que $E_n \subseteq E_{n+1}$ para qualquer $n \in \N$ como queríamos.
-    Além disso, um elemento $a \in \displaystyle \bigcup_{n \in \N} E_n$ se, e somente se,
-    $a \in \displaystyle \bigcup_{n \in \N} (F_1 - F_n)$.
-    Isso é equivalente a dizer que existe um $n_0 \in \N$ tal que $a \in F_1 - F_{n_0}$.
-    Correspondentemente, $ a \in F_1$ e existe um $n_0 \in \N$ tal que $x \notin F_{n_0}$.
-    Isso só ocorre se $x \in F_1$, mas $x \notin \displaystyle \bigcup_{n \in \N} F_n$.
-    Portanto, $\displaystyle \bigcup_{j = 1}^\infty E_n = \displaystyle F_1 - \bigcup_{j = 1}^\infty F_n$.
-\end{prova}
-
-\begin{definition}
-\label{def:medida}
-    Uma medida é uma função $\mu: (X, \mathcal{C}) \to \xreta$ tal que satisfaz as seguintes condições:
-    \begin{enumerate}[label* = (\roman*)]
-        \item $\mu(\varnothing) = 0$;
-        \item $\mu(E) \geq 0, \ \forall A \in \mathcal{C}$;
-        \item Se $(A_n)$ é uma sequência disjunta de elementos de  $\mathcal{C}$, então 
-        $\displaystyle\mu\left(\bigcup_{n = 1}^\infty A_n\right) = \sum_{n = 1}^\infty\mu(A_n)$.
-        
-    \end{enumerate}
-\end{definition}
-
-Ou seja uma medida é uma função não negativa que é contavelmente aditiva.
-Além disso, o valor de $\mu$ pode ser igual à $+\infty$ para algum conjunto $A \in \mathcal{C}$.
-Quando temos que $\mu(E) < +\infty$ para qualquer que seja o conjunto $E \in \mathcal{C}$, dizemos que temos uma medida finita.
-
-\begin{definition}
-	\label{def:espaço-de-medida}
-	Dizemos que uma tripla ordenada $(X, \mathcal{C}, \mu)$ constituída por um conjunto $X$, uma \sigal $\mathcal{C}$ desse conjunto e uma medida $\mu$ sobre o espaço mensurável $(X, \mathcal{C})$ é um espaço de medida.
-\end{definition}
-
-
-% Exemplos de medida
-
-\begin{example}
-    Seja $X$ um conjunto e $\mathcal{C}$ a sigma álgebra formada por todos os subconjunto de $X$.    
-    Defina $\mu_1, \mu_2:\mathcal{C} \to \xreta$ pondo $\mu_1(A) = 0$ para qualquer  $A \in \mathcal{C}$ e 
-    $\mu_2$ é  pondo 
-
-$$\mu_2(A) = \left\{\begin{array}{cc}
-0, & \textrm{\ se \ } A = \varnothing \\
-+\infty,& \textrm{\ se \ } A \neq \varnothing
-\end{array}\right.$$
-Sendo definidas dessa forma, as funções $\mu_1$ e $\mu_2$ são medidas.
-\end{example}
-
-De fato, em ambas as condições \textit{(i)} e \textit{(ii)} são trivialmente satisfeitas.
-Para a condição \textit{(iii)}, temos que qualquer sequência disjunta $(A_n)$ acarretará que
-
-$$\mu_1\left(\bigcup_{n = 1}^\infty A_n\right) = 0 = \sum_{n = 1}^\infty 0 = \sum_{n = 1}^\infty \mu_1(A_n) $$
-Para $\mu_2$ temos dois casos possíveis.
-Se  $\displaystyle \bigcup_{n = 1}^\infty A_n  = \varnothing$, então $\mu_2\left(\displaystyle \bigcup_{n = 1}^\infty A_n\right) = 0$. Entretanto isso ocorre somente se $A_j = \varnothing$ para todo $j \in \N$.
-Logo, 
-
-$$\sum_{n = 1}^\infty \mu_2(A_n) = \sum_{n = 1}^\infty \mu_2(\varnothing) = \sum_{n = 1}^\infty 0 = 0$$
-Caso $\displaystyle \bigcup_{n = 1}^\infty A_n  \neq  \varnothing$, conseguimos observar que os termos da sequência $(A_n)$ só podem ser de dois tipos ou $A_j = 0$ ou $A_j = +\infty$ para algum $j \in \N$. Com isso,  $\mu_2\left(\displaystyle \bigcup_{n = 1}^\infty A_n\right) = +\infty$.
-
-Ademais, na soma $\displaystyle \sum_{n = 1}^\infty \mu_2(A_n)$ só teremos soma dos termos $0 + (+ \infty)$ ou $(+\infty) + (+\infty)$.
-Desta forma, $\displaystyle \sum_{n = 1}^\infty \mu_2(A_n) = \sum_{n = 1}^\infty \mu_2(A_n) = +\infty$.
-Portanto $\mu_1$ e $\mu_2$ são medidas.
-
-% Probabilidade
-\begin{example}[Probabilidade]
-	Seja $(\Omega, \cc)$ um espaço mensurável.
-	A função $\mathcal{P}:\cc \to [0,1]$ é dita uma probabilidade se satisfaz as propriedades:
-	\begin{enumerate}[label* =(K\arabic*)]
-		\item $\mathcal{P}(\Omega) = 1$;
-		\item $\mathcal{P}(A) \geq 0,\ \forall A \in \cc$;
-		\item Se $(A_n)$ é uma sequência disjunta de elementos de  $\mathcal{C}$, então 
-		$\displaystyle\mathcal{P}\left(\bigcup_{n = 1}^\infty A_n\right) = \sum_{n = 1}^\infty\mathcal{P}(A_n)$.
-		\footnote{As propriedades \textit{K1, K2} e \textit{K3} são chamadas de \textit{Axiomas de Kolmogorov}}
-	\end{enumerate}
-\end{example}
-
-Observe que as condições da \textit{(ii)} e \textit{(iii)} da definição \ref{def:medida} são satisfeitas por definição da função de probabilidade.
-Resta provar que $\mathcal{P}(\varnothing) = 0$.
-Assim, com o auxilio das propriedades \textit{(K1)} e \textit{(K3)}, segue que 
-$$
-\pp(\Omega)
-= 
-\pp(\Omega \cup \varnothing)
-= 
-\pp(\Omega) + \pp(\varnothing)
-\Rightarrow
-\pp(\Omega)
-= 
-\pp(\Omega) + \pp(\varnothing)
-$$
-Logo, $\pp(\varnothing) = 0$. 
-Portanto a função probabilidade é uma medida.
-Neste caso, o espaço de medida $(\Omega, \cc, \pp)$ é chamado de espaço de probabilidades.
-Além disso, uma função $\cc$-mensurável pela definição \ref{def:mensurabilidade-abstrata} em um espaço de probabilidades é chamada de variável aleatória.
-
-% Unidade de Medida Concentrada em p
-\begin{example}[Unidade de Medida Concentrada em $p$]
-\label{ex:medida-concentrada-em-p}
-    Seja $(X, \mathcal{C})$ um espaço mensurável tal como no exemplo $a$ e $p$ um elemento de $X$.
-    Defina $\mu: \mathcal{C} \to \xreta$  como sendo
-
-
-$$\mu(A) = \left\{\begin{array}{cc}
-0, & \textrm{\ se \ } p \notin A \\
-1, & \textrm{\ se \ } p \in A 
-\end{array}\right.$$
-
-
-Então $\mu$ é uma medida.
-Verdadeiramente, observe que $p \notin \varnothing$, ou seja, $\mu(\varnothing) = 0$.
-Trivialmente, tem-se $\mu(A) \geq 0,\ \forall A \in \mathcal{C}$, pela construção de $\mu$.
-
-
-
-\end{example}
-
-% Medida de contagem
-\begin{example}
-    Seja $X = \N$ e $\mathcal{C}$ sendo o conjunto das partes de $\N$. 
-para $A \in \mathcal{C}$, definimos $\mu(A)$ por meio da sua cardinalidade, isto é, se $A$ é finito, então $\mu(A)$ é quantidade de elementos de $A$. Caso contrário, $\mu(A) = +\infty$.
-
-\end{example}
-
-
-
-% Teorema
-
-
-\begin{theorem}
-\label{teo:operacoes-com-medidas-1}
-	Seja $\mu$ uma medida definida sobre uma \sigal $\mathcal{C}$.
-	Se $A$ e $B$ são elementos de $\mathcal{C}$ e $A \subset B$, então $\mu(A) \leq \mu(B)$
-	Se $\mu(A) < +\infty$, então $\mu(A-B) = \mu(A) - \mu(B)$.
-\end{theorem}
-
-\begin{prova}
-	Suponha que $A \subset B$, então $A = B \cup (B - A)$ e $A \cap (B - A) = \varnothing$. Segue pela propriedade $(ii)$ que 
-	
-	$$\mu(B) = \mu(A) + \mu(B-A)$$
- Lembre que $B-A = B\cap A^c$. Como $A \in \mathcal{C} \Rightarrow A^c \in \mathcal{C}$.
- Além disso, como $B \in \mathcal{C}$ temos que $ B\cap A^c$ consequentemente $B - A \in \mathcal{C}$.
- Assim, como $\mu$ é uma medida e $B-A \in \mathcal{C}$, temos que $\mu(B-A) \geq 0$.
- Segue pela definição da relação de $\geq$ que $\mu(B) \geq \mu(A)$.
- Observe que se $\mu(A) < \infty$, temos que 
-
-	$$\mu(B) = \mu(A) + \mu(B-A) 
- \Leftrightarrow \mu(B) - \mu(A) =  \mu(B-A)
- $$
-Como desejávamos.
-\end{prova}
-
-\begin{proposition}
-\label{prop:limite-sequencia-crescente}
-Seja $\mu$ uma medida definida sobre uma \sigal $\mathcal{C}$.
-Se $(E_n)$ é uma sequência crescente de $\mathcal{C}$, então $\mu\left(\displaystyle \bigcup_{n = 1}^\infty E_n\right) = \dlim_{n \to \infty} \mu(E_n)$.
-\end{proposition} 
-
-\begin{prova}
-    Ora, se $\mu(E_n) = +\infty$ para algum $n \in \N$ ambos os lados da equação acima são $+\infty$.
-    Desta forma, vamos supor que $\mu(E_n) < +\infty$ para todo $n \in \N$.
-    Com isso, vamos construir uma sequência $(A_n)$ pondo $A_1 = E_1$ e $A_n = E_n - E_{n-1}$ para qualquer $n>1$.
-    Então pela proposição \ref{prop:sequencia-crescente-conjuntos-resultado-A_n}, $(A_n)$ é uma sequência disjunta, temos $E_n = \bigcup_{j = 1}^n A_j$ e $\bigcup_{j = 1}^\infty E_j = \bigcup_{j = 1}^\infty A_j$.
-    Como $\mu$ contavelmente aditiva, 
-    $$\mu\left(\bigcup_{n = 1}^\infty E_n\right)
-    =\mu\left(\bigcup_{n = 1}^\infty A_n\right)
-    = \sum_{n = 1}^\infty \mu(A_n)
-    = \lim_{m \to +\infty}\sum_{n = 1}^m \mu(A_n)$$
-    Pelo teorema \ref{teo:operacoes-com-medidas-1} vemos que $\mu(A_n) = \mu(E_n) - \mu(E_{n - 1 })$ para $n > 1$.
-    Assim, 
-    
-    \begin{align*}
-        \lim_{m \to +\infty}\sum_{n = 1}^m \mu(A_n)
-        =&
-        \lim_{m \to +\infty}(\mu(A_1) + \mu(A_2) + \cdots +\mu(A_m))\\
-        =&
-        \lim_{m \to +\infty}(\mu(E_1) + \mu(E_2 - E_1) + \cdots +\mu(E_m - E_{m-1}))\\
-        =&
-        \lim_{m \to +\infty}(\mu(E_1) + \mu(E_2) - \mu(E_1) + \cdots +\mu(E_m) - \mu(E_{m-1}))\\
-        =&
-        \lim_{m \to +\infty}(\mu(E_1) - \mu(E_1) + \mu(E_2)  + \cdots  - \mu(E_{m-1}) +\mu(E_m) )\\
-        =&
-        \lim_{m \to +\infty} \mu(E_m)
-    \end{align*}
-    Segue que $\mu\left(\displaystyle \bigcup_{n = 1}^\infty E_n\right) = \dlim_{n \to \infty} \mu(E_n)$.
-
-
-
-
-% Note que $H_2 = A_2 - A_1$ e $H_3 = A_3 - A_2$. Logo, $H_1 \cup H_2 \cup H_3$
-% Assim, 
-
-% % \begin{align*}
-%     \bigcup_{n = 1}^4 H_n =&
-%     \bigcup_{n = 1}^4 (A_n - A_{n-1})\\
-%     =&
-%     \bigcup_{n = 1}^4 \left(A_n \cap (A_{n-1})^c\right)\\
-%     =&
-%     \left(A_1 \cap (A_{1-1})^c\right)\\
-    
-% \end{align*}
-
-
-\end{prova}
-
-\begin{proposition}
-Seja $\mu$ uma medida definida sobre uma \sigal $\mathcal{C}$.
-Se $(B_n)$ é uma sequência decrescente de $\mathcal{C}$ e $\mu(B_1) < +\infty$, então 
-$\mu\left(\displaystyle \bigcap_{n = 1}^\infty B_n\right) = \dlim_{n \to \infty} \mu(B_n)$.
-\end{proposition} 
-\begin{prova}
-    Defina uma sequência $(T_n)$ de elementos de $\mathcal{C}$ pondo $T_n = B_1 - B_n$ para qualquer que seja $n \in \N$.
-    Pela proposição \ref{prop:sequencia-decrescente-conjuntos-resultado-A_n}, $(T_n)$ é crescente.
-    Assim, aplicando o a proposição \ref{prop:limite-sequencia-crescente} temos que 
-    $$
-    \mu\left(\bigcap_{n \in \N} T_n\right) = \lim_{n \to +\infty} \mu(T_n)
-    $$
-    Usando o teorema \ref{teo:operacoes-com-medidas-1}, obtemos
-    $$
-    \lim_{n \to +\infty} \mu(T_n) = \lim_{n \to +\infty} [\mu(B_1) - \mu(B_n)] = \mu(B_1) - \lim_{n \to +\infty} \mu(B_n)
-    $$
-    Segue pela proposição \ref{prop:sequencia-decrescente-conjuntos-resultado-A_n} que 
-    $$
-    \lim_{n \to +\infty} \mu(T_n) = \mu(B_1) - \mu\left(\bigcap_{n \in \N} B_n\right)
-    $$
-    Combinando as duas equações obtemos que
-    \begin{align*}
-        \mu(B_1) - \lim_{n \to +\infty} \mu(B_n) = \mu(B_1) - \mu\left(\bigcap_{n \in \N} B_n\right)
-    \end{align*}
-    Portanto, $\displaystyle \lim_{n \to +\infty} \mu(B_n) = \mu\left(\bigcap_{n \in \N} B_n\right)$
-\end{prova}
-
-% Espaços de Medida
-
-
-
-Uma vez que já foram bem explorados os espaços mensuráveis e os espaços de medida, nosso objetivo neste capítulo é medir 
+Isso faremos na seção seguinte.
