--- a/lib/preambulo.tex
+++ b/lib/preambulo.tex
@@ -29,6 +29,7 @@
 \usepackage{amsfonts, amssymb, amsmath}             % Fonte e símbolos matemáticos
 
 \usepackage{tikz}
+\usetikzlibrary{spy}
 \usepackage{pgf}
 \usepackage{pgfplots}
 \usetikzlibrary{positioning,shapes,fit,calc}
