--- a/elementos-pre-textuais/simbolos.tex
+++ b/elementos-pre-textuais/simbolos.tex
@@ -5,7 +5,7 @@
 
 \begin{description}
 	\item $\sigma$ \hspace{2cm} Letra grega minúscula \enquote{sigma}.
-	\item $\chi$ \hspace{2cm} Letra grega minúscula \enquote{qui}.
+	\item $\chi$   \hspace{2cm} Letra grega minúscula \enquote{qui}.
 	\item $\varnothing$ \hspace{2cm} O conjunto vazio.
 	\item $\cc$ \hspace{2cm} Caractere \enquote{C} em estilo caligráfico.
 	\item $I_n$ \hspace{2cm} Conjunto dos $n$ primeiros números naturais.
@@ -14,6 +14,6 @@
 	\item $\R$ \hspace{2cm} Conjunto dos Números Reais.
 	\item $\R^0$ \hspace{2cm} Conjunto dos Números Reais sem o número $0$.
 	\item $\borel$ \hspace{2cm} \sigal de Borel.
-	\item $\sup$ \hspace{2cm} Supremo.	
+	\item $\sup$ \hspace{2cm} Supremo de um conjunto.	
 \end{description}
 \pagebreak 
